# Autonomes_Fahren

./: README.md
project/: .gitignore  Infos.md  README.md  car.py  env_wrapper.py  input_controller.py  lane_detection.py  lateral_control.py  longitudinal_control.py  main.py  path_planning.py  pyproject.toml  requirements.txt  seeds.txt  test_installation.py  test_lane_detection.py  test_lateral_control.py  test_longitudinal_control.py  test_path_planning.py  test_pipeline.py  trial_errors_of_path_planning.py
